tests/integration/snapshots/integration__conformance__n_string_unescaped_tab.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["	"]
stdout --- 
<empty>
stderr --- 
error: unexpected unescaped control character `\t` in string literal
 --> stdin:1:3
  |
1 | ["    "]
  |   ^^^^
  |
help: replace the control character with its escaped form
  |
1 | ["\t"]
  |   ++
