tests/integration/snapshots/integration__conformance__n_string_unicode_capitalu.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
"\UA66D"
stdout ---

stderr ---
error: expected escapable sequence, found `U`.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:3
  |
1 | "\UA66D"
  | --^
  | ||
  | |escape slash found here
  | opening quote found here
  |
help: remove unnecessary escape slash
  |
1 - "\UA66D"
1 + "UA66D"
  |
