tests/integration/snapshots/integration__conformance__n_structure_angle_bracket_null.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
[<null>]
stdout ---

stderr ---
error: unexpected character `<`. expected start of a json value
 --> stdin:1:2
  |
1 | [<null>]
  |  ^
