tests/integration/snapshots/integration__conformance__n_structure_array_trailing_garbage.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[1]x
stdout ---

stderr ---
error: unexpected character `x`. expected start of a json value
 --> stdin:1:4
  |
1 | [1]x
  |    ^
